# DRR

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
analysis/: README.md
analysis/archive/: upstream_reflect_demo.ipynb
analysis/notebooks/: bench_llm_scene_uncertainty.ipynb  bench_vlm_captioner.ipynb  perception_conceptgraphs_real.ipynb  perception_yoloe_real.ipynb  real_error_taxonomy.ipynb  real_validation.ipynb  sim_case_analysis_round1.ipynb  sim_case_analysis_round2.ipynb  sim_error_taxonomy.ipynb  sim_llm_world_tracking.ipynb  sim_uncertainty_calibration_standard.ipynb  sim_uncertainty_calibration_target.ipynb  sim_uncertainty_replanning.ipynb  sim_validation.ipynb
analysis/scripts/: build_reference_scene_graphs.py  make_calibration_tables.py  make_web_calibration_figure.py  reproduction_metrics.py
docs/: data_and_artifacts.md  fork_changes.md  repo_map.md  upstream_baseline.md
environment/: environment.lock.yml  environment.yml  real_world.txt
models/: README.md
outputs/: README.md
outputs/analysis/llm_calibration_robo2vlm/: normalized_descriptions.json  open_world_descriptions.json  robo2vlm_panel_results.json  robo2vlm_scene_ctx.json  scorecard.csv  sim_frame_captions.json  vlm_scene_descriptions.json  xvl_caption_variance.json  yoloe_descriptions.json
outputs/analysis/llm_calibration_standard_entropy/: metrics_by_model.csv  metrics_by_model_scored.csv  mut_sample.json  panel_solvability_standard.json  results_all_models.csv
outputs/analysis/llm_calibration_target_distribution/: EXPERIMENT_16_REPORT.md  human_eval_sample.csv  metrics_by_cell.csv  metrics_by_difficulty.csv  metrics_by_model.csv  metrics_by_model_scored.csv  metrics_by_regime.csv  metrics_by_type.csv  metrics_composition.csv  questions_sample.csv  results.csv  results_all_models.csv
outputs/analysis/llm_local_uncertainty_measurement/: detector_trace__gpt-5_4.csv  detector_trace__gpt-5_4__sim_grounded.csv  episode_metrics__gpt-5_4.csv  episode_metrics__gpt-5_4__sim_grounded.csv  plan_trace__gpt-5_4.csv  plan_trace__gpt-5_4__sim_grounded.csv  stage_timings__gpt-5_4__sim_grounded.csv
outputs/analysis/vlm_capability_measurement/: judge.json  (+1 more)
sample_data/: README.md
src/reflect/: __init__.py
tools/: debug_local_graph.py
web/: README.md  index.html  style.css
(+242 files in other folders)
